--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Iko Nini",
-  "name": "Iko Nini Merchandise Shop",
+  "short_name": "Ruple Art",
+  "name": "For the love of art",
   "icons": [
     {
       "src": "favicon.ico",
