--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
     "he": "^1.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-checkmark": "^1.4.0",
     "react-dom": "^18.2.0",
